// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render as expected 1`] = `
<span
  class="text--medium"
>
  Text
</span>
`;

exports[`should render as expected 2`] = `
<p
  class="text--medium"
>
  Text
</p>
`;
